[package]
name = "sproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
httparse = "1.6.0"
trust-dns-resolver = "0.21.1"