[package]
name = "sproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6" }
lazy_static = "1.4.0"
tokio = { version = "1.17.0", features = ["full"] }
bytes = "1.1.0"
tokio-util = "0.7.1"
httparse = "1.6.0"
base64 = "0.13.0"